<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/foot_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/foot_bar_words"
            android:background="@color/lightBlue"
            android:textColor="#ffffff"
            android:textSize="20dp"
            ></Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/lightGreen"
            android:text="@string/foot_bar_NWordBook"
            android:textColor="#ffffff"
            android:textSize="20dp"
            ></Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/foot_bar_Mine"
            android:textColor="#ffffff"
            android:textSize="20dp"
            ></Button>
    </LinearLayout>
</RelativeLayout>
