<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp">
        <Button
            android:id="@+id/new_word_book"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:text="@string/new_word_book"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="18dp"
            android:background="@drawable/shape_corner"
            ></Button>
        <Button
            android:id="@+id/word_share"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:text="@string/word_share"
            android:textColor="#000000"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/shape_corner"
            ></Button>
        <Button
            android:id="@+id/lianci"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:text="@string/lianci"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/new_word_book"
            android:background="@drawable/shape_corner"
            ></Button>
        <Button
            android:id="@+id/search"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:text="@string/search"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/lianci"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/word_share"
            android:layout_marginLeft="20dp"
            android:background="@drawable/shape_corner"
            ></Button>
        <Button
            android:id="@+id/mine"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:text="@string/mine"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:layout_below="@+id/search"
            android:background="@drawable/shape_corner"
            ></Button>
        <Button
            android:id="@+id/exit"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:text="@string/exit"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/mine"
            android:layout_below="@+id/search"
            android:background="@drawable/shape_corner"
            ></Button>
    </RelativeLayout>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"></TextView>
    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"></TextView>
</RelativeLayout>
